--- a/Creative Proj/index.html
+++ b/Creative Proj/index.html
@@ -78,7 +78,7 @@
 			  x.add(option);
 			}
 			</script>
-        <script src="js/app.js"></script>
+        <script src="JS/app.js"></script>
     </body>
 
 </html>
