--- a/Creative Proj/index.html
+++ b/Creative Proj/index.html
@@ -5,7 +5,7 @@
         <title>JavaScript Selected Value</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="CSS/style.css" rel="stylesheet">
     </head>
     <body>
 		
