fixed file path to assests in space invaders

--- a/SpaceInvaders/spaceinvaders.html
+++ b/SpaceInvaders/spaceinvaders.html
@@ -16,7 +16,7 @@
 	<p id="message"></p>
 
 	<!-- Image of ship -->
-	<img id="ship" src="assets\cool_ship.png" >
+	<img id="ship" src="Assets\cool_ship.png" >
 
 	<!-- Blast Sound Effect -->
 	<audio id="blaster">
