Fixed a lot of path name issues for the gitpages urls

--- a/CarGame/car_game.html
+++ b/CarGame/car_game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Collision Course the Game</title>
-	<link rel="stylesheet" href="CSS\car_game.css">
+	<link rel="stylesheet" href="CSS/car_game.css">
 </head>
 <body>
 	<div id="message"></div>
@@ -12,31 +12,31 @@
 		<p>Press A to move left, D to move right. Try not to crash</p>
 	</div>
 
-	<img id="OrangeCar" class="car" src="Media\orange.png" alt="Player Car">
+	<img id="OrangeCar" class="car" src="Media/orange.png" alt="Player Car">
 
 	<audio id="engine_rev">
-		<source src="Media\engine.mp3" type="audio/mp3">
+		<source src="Media/engine.mp3" type="audio/mp3">
 	</audio>
 
 	<audio id="derezzed">
-		<source src="Media\derezzed.mp3" type="audio/mp3">
+		<source src="Media/derezzed.mp3" type="audio/mp3">
 	</audio>
 
 	<audio id="gameover1">
-		<source src="Media\game_over1.mp3" type="audio/mp3">
+		<source src="Media/game_over1.mp3" type="audio/mp3">
 	</audio>
 
 	<audio id="gameover2">
-		<source src="Media\game_over.mp3" type="audio/mp3">
+		<source src="Media/game_over.mp3" type="audio/mp3">
 	</audio>
 
 	<audio id="gameover3">
-		<source src="Media\game_over_man.mp3" type="audio/mp3">
+		<source src="Media/game_over_man.mp3" type="audio/mp3">
 	</audio>
 
 
 	
 
-<script src="Js\car_game.js" type="text/javascript" ></script>
+<script src="JS/car_game.js" type="text/javascript" ></script>
 </body>
 </html>
