--- a/SpaceInvaders/spaceinvaders.html
+++ b/SpaceInvaders/spaceinvaders.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Alien Warzone 2</title>
-		<link rel="stylesheet" type="text/css" href="CSS\spaceinvaders.css">
+		<link rel="stylesheet" type="text/css" href="CSS/spaceinvaders.css">
 	</head>
 
 	<body>
@@ -16,38 +16,38 @@
 	<p id="message"></p>
 
 	<!-- Image of ship -->
-	<img id="ship" src="Assets\cool_ship.png" >
+	<img id="ship" src="Assets/cool_ship.png" >
 
 	<!-- Blast Sound Effect -->
 	<audio id="blaster">
-		<source src="Assets\blaster2.mp3" type="audio/mp3">
+		<source src="Assets/blaster2.mp3" type="audio/mp3">
 	</audio>
 
 	<!-- Explosion Sound Effect -->
 	<audio id="explosion_sfx">
-		<source src="Assets\explosion+3.mp3" type="audio/mp3">
-		<source src="Assets\explosion+3.wav" type="audio/wav">
+		<source src="Assets/Explosion+3.mp3" type="audio/mp3">
+		<source src="Assets/Explosion+3.wav" type="audio/wav">
 	</audio>
 
 	<!-- You Win Sound Effect -->
 	<audio id="win">
-		<source src="Assets\youwin2.mp3" type="audio/mp3">
+		<source src="Assets/youwin2.mp3" type="audio/mp3">
 	</audio>
 	<audio id="winning">
-		<source src="Assets\winning.mp3" type="audio/mp3">
+		<source src="Assets/winning.mp3" type="audio/mp3">
 	</audio>
 
 	<!-- Background Sound -->
-	<audio autoplay id="bg">
-		<source src="Assets\Space Invaders Layout [Full Song, Almost 6 Minute XL Demon].mp3" type="audio/mp3">
+	<audio id="bg">
+		<source src="Assets/SpaceInvaders.mp3" type="audio/mp3">
 	</audio>
 
 	<!--Lose-->
 	<audio id="go1">
-		<source src="Assets\game_over1.mp3" type="audio/mp3">
+		<source src="Assets/game_over1.mp3" type="audio/mp3">
 	</audio>
 	<audio id="go">
-		<source src="Assets\game_over.mp3" type="audio/mp3">
+		<source src="Assets/game_over.mp3" type="audio/mp3">
 	</audio>
 
 
