--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h1>Pierre Labroche</h1>
 	<h2>Bio:</h2>
-		<p> I am a rising Junior at Stanford University studying EE and CS, with an aspiration for 
+		<p> I am a Senior and coterminal Master's student at Stanford University studying CS, with an aspiration for 
 			robotics and software engineering. </p> 
 	<h2>Links:</h2>
 		<p><ol>
